Fix z-index in WorkItem desc

--- a/src/components/WorkItem/WorkItem.scss
+++ b/src/components/WorkItem/WorkItem.scss
@@ -36,7 +36,6 @@
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    z-index: 100;
     line-height: 24px;
 
     &:after {
